# remesh

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLIBIGL.cmake
src/: main.cpp
